--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,27 +1,37 @@
-<h2 {% if site.style == 'dark' %}class="text-white"{% endif %}>My Projects</h2>
-<p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">GitHub repositories that I've built or contributed to.</p>
-<div class="d-sm-flex flex-wrap gutter-condensed mb-4">
-  {% if site.projects.sort_by == 'stars' %}
-    {% assign sort_order = 'stargazers_count', 'last' %}
-  {% else %}
-    {% assign sort_order = 'pushed_at' %}
-  {% endif %}
-
-  {% if site.projects.exclude.archived && site.projects.exclude.forks %}
-    {% assign filtered_repos = site.github.public_repositories | where:'archived', false | where:'fork', false | sort: sort_order | reverse %}
-  {% elsif site.projects.exclude.archived %}
-    {% assign filtered_repos = site.github.public_repositories | where:'archived', false | sort: sort_order | reverse %}
-  {% elsif site.projects.exclude.forks %}
-    {% assign filtered_repos = site.github.public_repositories | where:'fork', false | sort: sort_order | reverse %}
-  {% else %}
-    {% assign filtered_repos = site.github.public_repositories | sort: sort_order | reverse %}
-  {% endif %}
-
-  {% for repository in filtered_repos | limit: site.projects.limit %}
-    {% unless site.projects.exclude.projects contains repository.name %}
-      <div class="col-sm-6 col-md-12 col-lg-6 col-xl-4 mb-3">
-        {% include repo-card.html %}
+<div id="projects">
+  <p>Some of the projects I've built or contributed to:</p>
+  <a id="proj-quantum-simulator" href="https://github.com/rasmus-d/dd2367-project" class="project">
+    <div class="proj-text">
+      <h3>Quantum Computer Simulator</h3>
+      <div class="proj-description" >
+        I implemented a density matrix simulator based on the general formulation of quantum computing.<br>Check out the GitHub-repository!
       </div>
-    {% endunless %}
-  {% endfor %}
+    </div>
+    <img src="/assets/img/quantum.jpeg" alt="quantum gates" class="proj-image">
+  </a>
+
+  <a id="proj-cyber-physical" href="https://github.com/miking-lang/cps-software" class="project">
+    <div class="proj-text">
+      <h3>Cyber Physical Systems</h3>
+      <div class="proj-description">
+        Developed robots. Contributed in everything from CAD, C-programming to robotics.<br>
+        As a research assistant at KTH together with 1-3 other studens.<br>Check out the GitHub-repository!
+      </div>
+    </div>
+    <img src="/assets/img/spider.png" alt="spider robot" class="proj-image">
+    <img src="/assets/img/humanoid.png" alt="humanoid robot" class="proj-image" style="width:100px; opacity: 0.7;">
+  </a>
+
+  <a id="proj-bachelors" href="https://urn.kb.se/resolve?urn=urn:nbn:se:kth:diva-340292" class="project">
+    <div class="proj-text">
+      <h3>Bachelor's thesis</h3>
+      <div class="proj-description">
+        <i>Designing a communication controller for a wireless sensor network: Practical considerations and comparisons</i><br>
+        Together with Axel Karlsson.
+        <!--TODO: Link to code-->
+      </div>
+    </div>
+    <img src="/assets/img/bachelor.JPG" alt="three communication controllers" class="proj-image">
+  </a>
+
 </div>
