--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -52,3 +52,67 @@
 .min-height-full {
   min-height: 100vh;
 }
+
+html {
+  width: 100%;
+}
+
+body {
+  width: 100%;
+  background-color: #2f363d;
+  //color: rgb(90, 154, 158);
+  //color: rgb(126, 186, 190);
+  color: rgb(98, 175, 180);
+  text-align: center;
+  font-size: 20px;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+a {
+  color: rgb(82, 158, 165);
+}
+
+#projects {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.project {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  width: 600px;
+  //background-color: #201b6e;
+  background-color: #191557;
+  border-radius: 5px;
+  border-color: black;
+  border-width: 2px;
+  padding: 5px;
+  display: flex;
+
+  text-align: center;
+  font-size: 20px;
+}
+
+.project:hover {
+  background-color: #3f4b58;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.proj-image {
+  width: 200px;
+  height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+  border:#000000 solid 3px;
+  border-radius: 10px;
+}
+
+#contacts {
+  margin-top: 20px;
+}
