--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -14,7 +14,7 @@
     <div class="proj-text">
       <h3>Cyber Physical Systems</h3>
       <div class="proj-description">
-        Developed robots. Contributed in everything from CAD, C-programming to robotics.<br>
+        Developed robots used in machine learning research. Contributed in everything from CAD, C-programming to robotics.<br>
         As a research assistant at KTH together with 1-3 other studens.<br>Check out the GitHub-repository!
       </div>
     </div>
